# octorun-provider-template

./: AUTHORS  README.md  main.py  pyproject.toml  requirements.txt  setup.py
provider/: __init__.py  provider.py  service.py
